more complete analysis